--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 /* Common style */
-@import 'common/_variables';
-@import 'common/_global';
+@import '_variables';
+@import '_global';
 
 /* Blocks style */
 @import 'blocks/**/*.scss';
