--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,22 +1,24 @@
 @font-face {
   font-family: 'Roboto';
-  src: url(./Roboto-Regular.woff) format('woff'),
-  url('./') format('woff'),
-    url(./Roboto-Regular.woff2) format('woff2');
+  src: url('fonts/Roboto-Regular.woff') format('woff'),
+    url('fonts/Roboto-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
-  src: url(./Roboto-Medium.woff) format('woff'),
-    url(./Roboto-Medium.woff2) format('woff2');
+  src: url('fonts/Roboto-Medium.woff') format('woff'),
+    url('fonts/Roboto-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
-  src: url(./Roboto-Bold.woff) format('woff'),
-    url(./Roboto-Bold.woff2) format('woff2');
+  src: url('fonts/Roboto-Bold.woff') format('woff'),
+    url('fonts/Roboto-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
