add section search

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,9 +1,9 @@
 .header {
   &__top-inner {
-    height: 90px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    height: 90px;
   }
   &__help {
     margin-right: 27px;
@@ -36,10 +36,11 @@
     background-color: $dark;
   }
   &__menu {
+    padding: 23px 0;
   }
   &__menu-item {
-    padding: 23px 0;
     display: inline-block;
+    // padding: 23px 0;
     &:not(:last-child) {
       margin-right: 40px;
     }
