add section products

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -11,11 +11,11 @@ $black: #000000;
 $dark: #263238;
 $bright: #e74c3c;
 $primary: #8bc34a;
+$light: #f4f6f5;
 
 $text: #546e7a;
 
 
-// $light: #edf4fb;
 // $pale: #cbdbe8;
 // $bright-light: #85c8ff;
 // $primary-dark: #5a6789;
