--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -18,22 +18,17 @@ body {
   color: $text;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
 a {
   display: inline-block;
   text-decoration: none;
   color: $text;
 }
 
-ul, li {
-  list-style: none;
+ul,
+li {
   font-size: 0;
   line-height: 1;
+  list-style: none;
 }
 
 img {
@@ -43,11 +38,39 @@ img {
 
 button {
   cursor: pointer;
+  border: none;
+  line-height: 1;
 }
 
-input:not([type=checkbox]):not([type=radio]), textarea {
+input:not([type='checkbox']):not([type='radio']),
+textarea {
   display: block;
   width: 100%;
   font-family: $fontFamily;
   resize: none;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.container-fluid {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 30px;
+  @media (max-width: 720px) {
+    padding: 0 15px;
+  }
+}
+
+.title {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.67;
+  color: $dark;
+  &--light {
+    color: $white;
+  }
 }
