--- a/src/styles/blocks/products.scss
+++ b/src/styles/blocks/products.scss
@@ -1,7 +1,7 @@
 .products {
-  padding: 121px 0 112px;
-  text-align: center;
+  padding: 121px 0 112px;  
   background-color: $light;
+  text-align: center;
   &__title {
     margin-bottom: 48px;    
   }
@@ -38,5 +38,9 @@
     color: $dark;
     background-color: $white;
     box-shadow: 0px 1px 3px 0 rgba(204, 216, 228, 0.75);
+    &.mixitup-control-active {
+      color: $white;
+      background-color: $bright;
+    } 
   }
 }
