--- a/src/styles/blocks/advantages.scss
+++ b/src/styles/blocks/advantages.scss
@@ -10,7 +10,8 @@
     justify-content: space-around;
   }
   &__item {
-    max-width: 318px;
+    max-width: 370px;
+    padding: 0 15px;
     text-align: center;
   }
   &__item-img {
