--- a/src/styles/blocks/author.scss
+++ b/src/styles/blocks/author.scss
@@ -1,7 +1,7 @@
 .author {
   padding: 245px 0 296px;
   background-image: url('/src/images/author-bg.jpg');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: top;
   background-size: contain;
   &__info {
