--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -22,3 +22,52 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?h4fk6x');
+  src:  url('fonts/icomoon.eot?h4fk6x#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?h4fk6x') format('truetype'),
+    url('fonts/icomoon.woff?h4fk6x') format('woff'),
+    url('fonts/icomoon.svg?h4fk6x#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-map-marker:before {
+  content: "\f041";
+}
+.icon-shopping-cart:before {
+  content: "\f07a";
+}
+.icon-phone:before {
+  content: "\f095";
+}
+.icon-bolt:before {
+  content: "\f0e7";
+}
+.icon-flash:before {
+  content: "\f0e7";
+}
+.icon-angle-right:before {
+  content: "\f105";
+}
+.icon-location-arrow:before {
+  content: "\f124";
+}
