--- a/src/styles/blocks/tutorials.scss
+++ b/src/styles/blocks/tutorials.scss
@@ -16,6 +16,9 @@
   &__item-img {
     display: block;
     min-height: 270px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
   &__item-title {
     padding: 40px 15px;
