--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -8,8 +8,6 @@
     display: flex;
     justify-content: space-between;
   }
-  &__col {
-  }
   &__title {
     position: relative;
     margin-bottom: 60px;
@@ -20,11 +18,11 @@
     &::before {
       position: absolute;
       top: 44px;
-      left: 0;
+      left: 2px;
       width: 51px;
       height: 3px;
-      background-color: $primary;
       content: '';
+      background-color: $primary;
     }
   }
   &__text {
@@ -33,58 +31,115 @@
   }
   &__contact {
     position: relative;
-    margin-bottom: 27px;
-    margin-left: 30px;
+    padding-left: 30px;
     font-size: 14px;
     font-weight: 500;
     line-height: 1.71;
     color: $white;
-  }
-  &__list {
+    &::before {
+      position: absolute;
+      left: 0;
+      content: '\f041';
+      font-family: 'icomoon';
+      font-size: 18px;
+      line-height: 1;
+      color: $primary;
+    }
+    &--phone {
+      margin-top: 27px;
+      &::before {
+        content: '\f095';
+      }
+    }
   }
   &__list-item {
+    position: relative;
+    margin-bottom: 24px;
+    padding-left: 21px;
     font-size: 15px;
-    line-height: 2.4;
     color: $text-light;
-    margin-left: 21px;
-  }
-  &__list-link {
+    &::before {
+      position: absolute;
+      left: 0;
+      content: '\f105';
+      font-family: 'icomoon';
+      font-size: 18px;
+      color: $primary;
+    }
   }
   &__social {
     margin-bottom: 40px;
   }
   &__social-item {
+    display: inline-block;
+    &:not(:last-child) {
+      margin-right: 7px;
+    }
   }
   &__social-link {
+    width: 28px;
+    height: 28px;
+    background: url('/src/images/css_sprites.png');
+    &--facebook {
+      background-position: -1px -1px;
+    }
+    &--twitter {
+      background-position: -31px -31px;
+    }
+    &--youtube {
+      background-position: -61px -1px;
+    }
+    &--pinterest {
+      background-position: -1px -31px;
+    }
+    &--linkedin {
+      background-position: -31px -1px;
+    }
   }
   &__form {
-    width: 261px;
     position: relative;
+    width: 261px;
   }
   &__form-title {
+    margin-bottom: 20px;
     font-size: 20px;
     font-weight: 400;
     line-height: 1;
     color: $white;
-    margin-bottom: 20px;
   }
   &__form-field {
-    padding: 14px 43px 15px 16px;
+    height: 40px;
+    padding: 0 60px 0 16px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1;
+    color: $white;
     background-color: #2f3c43;
+    border: none;
     &::placeholder {
-      font-size: 11px;
+      font-size: 14px;
       font-weight: 400;
       line-height: 1;
       color: #697378;
     }
   }
   &__form-btn {
-    width: 43px;
-    height: 38px;
-    background-color: $primary;
     position: absolute;
-    top: 40px;
+    bottom: 0;
     right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 43px;
+    height: 40px;
+    background-color: $primary;
+    &::before {      
+      content: '\f124';
+      font-family: 'icomoon';
+      font-size: 20px;      
+      line-height: 1.8;
+      color: $white;
+    }
   }
   &__copy {
     padding: 24px 15px 30px;
